@@ -6,6 +6,7 @@ copyright_holder = Michael Schout
 [@Filter]
 -bundle = @MSCHOUT
 use_twitter = 1
+use_travis = 1
 
 [Prereqs]
 ; for ::PluginBundle::Easy
@@ -22,11 +23,10 @@ Dist::Zilla::Plugin::RemovePrereqs = 0
 Dist::Zilla::Plugin::Repository = 0
 Dist::Zilla::Plugin::Signature = 0
 Dist::Zilla::Plugin::TaskWeaver = 0.093330
+Dist::Zilla::Plugin::TravisYML = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::PluginBundle::Classic = 0
 Dist::Zilla::PluginBundle::Filter = 0
 Dist::Zilla::PluginBundle::Git = 1.101230
 Pod::Elemental::Transformer::List = 0
 Pod::Weaver::Section::AllowOverride = 0
-
-[TravisYML]
